Bug 137628 - Item's rows in Autofilter list have two color
Summary: Item's rows in Autofilter list have two color
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2020-10-20 17:26 UTC by Roman Kuznetsov
Modified: 2021-01-05 14:20 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
File example with Autofilter (8.66 KB, application/vnd.oasis.opendocument.spreadsheet)
2020-10-20 17:28 UTC, Roman Kuznetsov
Details
A screenshot with blue-white item color (16.41 KB, image/png)
2020-10-20 17:28 UTC, Roman Kuznetsov
Details
screenshot list with dates are good (6.44 KB, image/png)
2020-10-22 16:13 UTC, Attila Szűcs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2020-10-20 17:26:41 UTC
Description:
Item's rows in Autofilter list have two color

After bug 116675 fixing.

Look at a screenshot in attach

Steps to Reproduce:
1. Open file from attach
2. Open Autofilter window in A1
3. Try select/deselect any items 
4. Look at items (see a screenshot in attach)

Actual Results:
Item's rows in Autofilter list have two color

Expected Results:
Item's rows in Autofilter list have only one color


Reproducible: Always


User Profile Reset: No



Additional Info:
current master 7.1
Comment 1 Roman Kuznetsov 2020-10-20 17:28:03 UTC
Created attachment 166555 [details]
File example with Autofilter
Comment 2 Roman Kuznetsov 2020-10-20 17:28:36 UTC
Created attachment 166556 [details]
A screenshot with blue-white item color
Comment 3 Roman Kuznetsov 2020-10-20 17:30:30 UTC
Attila, what do you think about it?
Comment 4 NISZ LibreOffice Team 2020-10-21 08:07:26 UTC
This is a side effect from bug #133160
see: https://bugs.documentfoundation.org/show_bug.cgi?id=133160#c3
Comment 5 Attila Szűcs 2020-10-22 16:13:18 UTC
Created attachment 166639 [details]
screenshot list with dates are good
Comment 6 Attila Szűcs 2020-10-22 17:23:54 UTC
(In reply to Roman Kuznetsov from comment #3)
> Attila, what do you think about it?

I tried to fix it, during fixing bug #133160 but i given up.
Maybe i will try once again later... But utill then i share what i found out  about it.

This problem does not happen if the list have any date value.. in that case, the treelist will have a bit different display ( +/- buttons )

If the treelist is a simple list then it looks like if there would be +1 column in the right side that can't be selected... 
I'm not sure what it is.... (I don't have much experience in LO GUI .. ) but there is an invisible (white) vertical line between the last column, and the white area.. 
I seen it when i shortened the text column more then needed, so the text overlapped to this "white area" .. and i seen the white line cut into the text.

Before i enabled the automatic horizontal scrollbar on the list, this problem was simply hidden by the window edge, because the list was wider than its parent window... so the rightmost part was not visible.
After i enabled the automatic horizontal scrollbar, the problem is visibble, because the scrollbar automatically sized based on the list size [it even automatically hide itself if the list is not wider then its place] so even if the list is really wide, you can still scroll to the right side to see this white column or whatsoever...
Comment 7 Roman Kuznetsov 2020-10-22 17:55:39 UTC
Caolan, may you have some tip or solution for this problem?
Comment 8 Commit Notification 2020-11-17 20:59:04 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/daab5921a29a4c7706bbeca9a04999baf8dfa149

tdf#137628 sc: fix white part in autofilter

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Roman Kuznetsov 2020-11-18 19:12:12 UTC
verified in

Version: 7.1.0.0.alpha1+ (x64)
Build ID: ccd0e5f445d4a7d0e7aca6c23c02c61bf14510b2
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

Attila, Caolan, thank you for fixing it!
Comment 10 NISZ LibreOffice Team 2021-01-05 14:20:34 UTC
Verified in:

Version: 7.2.0.0.alpha0+ (x64)
Build ID: 368c56144aab5794c39d5bc2082d9b3d6d7cebdb
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!