tdf#137628 Sc: fix white part in autofilter

Tracked the problem to bulk_insert_for_each, in an optimalization case
that use a fixed width instead of calculating the rows width.
In that case vertical scrollbar is not supported.

Instead of trying to fix bulk_insert_for_each, rather just turned off
the optimalization in low row count.

If there is no more then 100 rows, called bulk_insert_for_each
without the fixed width parameter, so it calculate the rows width,
and used it to resize the window, instead the previous estimation.

The problem is still present if there is more then 100 rows in the
autofilter, but hopefully it is a rare case.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: I9ef2a9ad3b428a858a7565bfb83c5d1add0e5ecd