sc/source/ui/view/gridwin.cxx
@@ -607,16 +607,9 @@ void ScGridWindow::LaunchAutoFilterMenu(SCCOL nCol, SCROW nRow)
     ScCheckListMenuControl& rControl = mpAutoFilterPopup->get_widget();
 
     int nMaxTextWidth = 0;
-    if (aFilterEntries.size() <= 10)
-    {
-        // do pixel calculation for all elements of short lists
-        for (const auto& rEntry : aFilterEntries)
-        {
-            const OUString& aText = rEntry.GetString();
-            nMaxTextWidth = std::max<int>(nMaxTextWidth, rControl.GetTextWidth(aText) + aText.getLength() * 2);
-        }
-    }
-    else
+    // if there is max 100 element in the list
+    // then the longest line width will be calculated later by initMembers(0)
+    if (aFilterEntries.size() > 100)
     {
         // find the longest string, probably it will be the longest rendered text, too
         // (performance optimization for long lists)
@@ -631,13 +624,14 @@ void ScGridWindow::LaunchAutoFilterMenu(SCCOL nCol, SCROW nRow)
             }
         }
         nMaxTextWidth = rControl.GetTextWidth(itMax->GetString()) + nMaxTextWidth * 2;
-    }
 
-    // window should be at least as wide as the column, or the longest text + checkbox, scrollbar ... (it is estimated with 70 pixel now)
-    // window should be maximum 1024 pixel wide.
-    int nWindowWidth = std::min<int>(1024, nMaxTextWidth + 70);
-    nWindowWidth = rControl.IncreaseWindowWidthToFitText(nWindowWidth);
-    nMaxTextWidth = std::max<int>(nMaxTextWidth, nWindowWidth - 70);
+        // window should be at least as wide as the column, or the longest text + checkbox, scrollbar ... (it is estimated with 70 pixel now)
+        // window should be maximum 1024 pixel wide.
+        int nWindowWidth = std::min<int>(1024, nMaxTextWidth + 70);
+        nWindowWidth = rControl.IncreaseWindowWidthToFitText(nWindowWidth);
+        nMaxTextWidth = std::max<int>(nMaxTextWidth, nWindowWidth - 70);
+        nMaxTextWidth += 20; // 20 pixel estimated for checkbox
+    }
 
     if (bLOKActive)
         mpAutoFilterPopup->SetLOKNotifier(SfxViewShell::Current());
@@ -717,7 +711,14 @@ void ScGridWindow::LaunchAutoFilterMenu(SCCOL nCol, SCROW nRow)
     rControl.addMenuItem(
         ScResId(SCSTR_STDFILTER), new AutoFilterAction(this, AutoFilterMode::Custom));
 
-    rControl.initMembers(nMaxTextWidth + 20); // 20 pixel estimated for the checkbox
+    rControl.initMembers(nMaxTextWidth);
+    // if the initMembers calculated the width of the longest row of TreeView
+    // then use it to size the window. +40 pixel estimated for the border + vertical scrollbar
+    if (nMaxTextWidth == 0)
+    {
+        int nWindowWidth = std::min<int>(1024, rControl.getWidth() + 40);
+        nWindowWidth = rControl.IncreaseWindowWidthToFitText(nWindowWidth);
+    }
 
     ScCheckListMenuControl::Config aConfig;
     aConfig.mbAllowEmptySet = false;
